--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ button:hover {
 }
 
 .legend {
-    position: relative;
+    position: fixed;
     float: right;
     width: 10%;
-    margin-right: 3em;
+    margin-left: 60%;
     margin-top: 3em;
     padding: .5em;
     font-family: Arial, Helvetica, sans-serif;
